--- a/resources/assets/harvestcraft/lang/pt_BR.lang
+++ b/resources/assets/harvestcraft/lang/pt_BR.lang
@@ -7,7 +7,7 @@ itemGroup.tabHarvestCraft3=Comida do HarvestCraft
 tooltip.harvestcraft.item.queenbeeItem=Apiária: Favo de Mel, Favo de Cera, Larvas\nGrade de Crafting: Geléia Real com 0 Durabilidade
 
 # Blocks
-tile.cuttingboard.name=Tábua de Corte
+tile.cuttingboard.name=Tábua de Cortar
 tile.pot.name=Pote
 
 tile.beehive.name=Beehive
@@ -168,127 +168,127 @@ tile.pamcranberryCrop.name=Cranberry Crop
 tile.pamriceCrop.name=Rice Crop
 tile.pamseaweedCrop.name=Seaweed Crop
 
-tile.pamcandleDeco1.name=White Candle
-tile.pamcandleDeco2.name=Orange Candle
-tile.pamcandleDeco3.name=Magenta Candle
-tile.pamcandleDeco4.name=Light Blue Candle
-tile.pamcandleDeco5.name=Yellow Candle
-tile.pamcandleDeco6.name=Lime Candle
-tile.pamcandleDeco7.name=Pink Candle
-tile.pamcandleDeco8.name=Dark Grey Candle
-tile.pamcandleDeco9.name=Light Grey Candle
-tile.pamcandleDeco10.name=Cyan Candle
-tile.pamcandleDeco11.name=Purple Candle
-tile.pamcandleDeco12.name=Blue Candle
-tile.pamcandleDeco13.name=Brown Candle
-tile.pamcandleDeco14.name=Green Candle
-tile.pamcandleDeco15.name=Red Candle
-tile.pamcandleDeco16.name=Black Candle
+tile.pamcandleDeco1.name=Vela Branca
+tile.pamcandleDeco2.name=Vela Laranja
+tile.pamcandleDeco3.name=Vela Magenta
+tile.pamcandleDeco4.name=Vela Azul Claro
+tile.pamcandleDeco5.name=Vela Amarela
+tile.pamcandleDeco6.name=Vela Lima
+tile.pamcandleDeco7.name=Vela Rosa
+tile.pamcandleDeco8.name=Vela Cinza Escuro
+tile.pamcandleDeco9.name=Vela Cinza Claro
+tile.pamcandleDeco10.name=Vela Ciano
+tile.pamcandleDeco11.name=Vela Roxa
+tile.pamcandleDeco12.name=Vela Azul
+tile.pamcandleDeco13.name=Vela Marrom
+tile.pamcandleDeco14.name=Vela Verde
+tile.pamcandleDeco15.name=Vela Vermelha
+tile.pamcandleDeco16.name=Vela Preta
 
-tile.pamcarrotCake.name=Carrot Cake
-tile.pamcheeseCake.name=Cheese Cake
-tile.pamcherrycheeseCake.name=Cherry Cheese Cake
-tile.pampineappleupsidedownCake.name=Pineapple Upside Down Cake
-tile.pamchocolatesprinkleCake.name=Chocolate Sprinkle Cake
-tile.pamredvelvetCake.name=Red Velvet Cake
+tile.pamcarrotCake.name=Bolo de Cenoura
+tile.pamcheeseCake.name=Cheesecake
+tile.pamcherrycheeseCake.name=Cheesecake de Cereja
+tile.pampineappleupsidedownCake.name=Bolo de Abacaxi de Cabeça para Baixo
+tile.pamchocolatesprinkleCake.name=Bolo com Granulado de Chocolate
+tile.pamredvelvetCake.name=Bolo Veludo Vermelhho
 tile.pamlamingtonCake.name=Lamington
 tile.pampavlovaCake.name=Pavlova
 tile.pamholidayCake.name=Holiday Cake
 
 # Items
-item.cottonItem.name=Cotton
-item.wovencottonItem.name=Woven Cotton
-item.cottonseedItem.name=Cotton Seed
+item.cottonItem.name=Algodão
+item.wovencottonItem.name=Malha de Algodão
+item.cottonseedItem.name=Semente de Algodão
 
-item.candleberryItem.name=Candleberry
-item.candleberryseedItem.name=Candleberry Seed
-item.waxItem.name=Candleberry Wax
+item.candleberryItem.name=Tungue
+item.candleberryseedItem.name=Semente de Tungue
+item.waxItem.name=Cera de Tungue
 
-item.hardenedleatherhelmItem.name=Hardened Leather Helm
-item.hardenedleatherchestItem.name=Hardened Leather Chest
-item.hardenedleatherleggingsItem.name=Hardened Leather Leggings
-item.hardenedleatherbootsItem.name=Hardened Leather Boots
-item.hardenedleatherItem.name=Hardened Leather
+item.hardenedleatherhelmItem.name=Capacete de Couro Endurecido
+item.hardenedleatherchestItem.name=Peitoral de Couro Endurecido
+item.hardenedleatherleggingsItem.name=Perneiras de Couro Endurecido
+item.hardenedleatherbootsItem.name=Botas de Couro Endurecido
+item.hardenedleatherItem.name=Couro Endurecido
 
-item.queenbeeItem.name=Queen Bee
-item.waxcombItem.name=Waxcomb
-item.honeycombItem.name=Honeycomb
-item.honeyItem.name=Honey
-item.beeswaxItem.name=Beeswax
-item.royaljellyItem.name=Royal Jelly
-item.grubItem.name=Bee Grub
+item.queenbeeItem.name=Abelha Rainha
+item.waxcombItem.name=Favo de Cera
+item.honeycombItem.name=Favo de Mel
+item.honeyItem.name=Mel
+item.beeswaxItem.name=Cera de Abelha
+item.royaljellyItem.name=Geléia Real
+item.grubItem.name=Larva de Abelha
 
-item.potItem.name=Pot
-item.skilletItem.name=Skillet
-item.saucepanItem.name=Saucepan
-item.bakewareItem.name=Bakeware
-item.cuttingboardItem.name=Cutting Board
-item.mortarandpestleItem.name=Mortar and Pestle
-item.mixingbowlItem.name=Mixing Bowl
-item.juicerItem.name=Juicer
+item.potItem.name=Pote
+item.skilletItem.name=Frigideira
+item.saucepanItem.name=Caçarola
+item.bakewareItem.name=Assadeira
+item.cuttingboardItem.name=Tábua de Cortar
+item.mortarandpestleItem.name=Pilão
+item.mixingbowlItem.name=Tigela de Mistura
+item.juicerItem.name=Espremedor
 
-item.asparagusItem.name=Asparagus
-item.asparagusseedItem.name=Asparagus Seed
-item.grilledasparagusItem.name=Grilled Asparagus
-item.barleyItem.name=Barley
-item.barleyseedItem.name=Barley Seed
-item.beanItem.name=Beans
-item.beanseedItem.name=Bean Seed
-item.beetItem.name=Beet
-item.beetseedItem.name=Beet Seed
-item.broccoliItem.name=Broccoli
-item.broccoliseedItem.name=Broccoli Seed
-item.cauliflowerItem.name=Cauliflower
-item.cauliflowerseedItem.name=Cauliflower Seed
-item.celeryItem.name=Celery
-item.celeryseedItem.name=Celery Seed
-item.cranberryItem.name=Cranberry
-item.cranberryseedItem.name=Cranberry Seed
-item.garlicItem.name=Garlic
-item.garlicseedItem.name=Garlic Seed
-item.gingerItem.name=Ginger
-item.gingerseedItem.name=Ginger Seed
-item.leekItem.name=Leek
-item.leekseedItem.name=Leek Seed
-item.lettuceItem.name=Lettuce
-item.lettuceseedItem.name=Lettuce Seed
-item.oatsItem.name=Oats
-item.oatsseedItem.name=Oats Seed
-item.onionItem.name=Onion
-item.onionseedItem.name=Onion Seed
-item.parsnipItem.name=Parsnip
-item.parsnipseedItem.name=Parsnip Seed
-item.peanutItem.name=Peanut
-item.peanutseedItem.name=Peanut Seed
-item.pineappleItem.name=Pineapple
-item.pineappleseedItem.name=Pineapple Seed
-item.radishItem.name=Radish
-item.radishseedItem.name=Radish Seed
-item.riceItem.name=Rice
-item.riceseedItem.name=Rice Seed
-item.ricecakeItem.name=Rice Cake
-item.rutabagaItem.name=Rutabaga
-item.rutabagaseedItem.name=Rutabaga Seed
-item.ryeItem.name=Rye
-item.ryeseedItem.name=Rye Seed
-item.scallionItem.name=Scallion
-item.scallionseedItem.name=Scallion Seed
-item.soybeanItem.name=Soybean
-item.soybeanseedItem.name=Soybean Seed
-item.spiceleafItem.name=Spice Leaf
-item.spiceleafseedItem.name=Spice Leaf Seed
-item.sunflowerseedsItem.name=Sunflower Seeds
-item.sunflowerseedItem.name=Sunflower Seed
-item.sweetpotatoItem.name=Sweet Potato
-item.sweetpotatoseedItem.name=Sweet Potato Seed
-item.bakedsweetpotatoItem.name=Baked Sweet Potato
-item.tealeafItem.name=Tea Leaf
-item.teaseedItem.name=Tea Seed
-item.teaItem.name=Cup of Tea
-item.turnipItem.name=Turnip
-item.turnipseedItem.name=Turnip Seed
-item.whitemushroomItem.name=White Mushroom
-item.whitemushroomseedItem.name=White Mushroom Spore
+item.asparagusItem.name=Aspargo
+item.asparagusseedItem.name=Semente de Aspargo
+item.grilledasparagusItem.name=Aspargo Grelhado
+item.barleyItem.name=Cevada
+item.barleyseedItem.name=Semente de Cevada
+item.beanItem.name=Feijões
+item.beanseedItem.name=Semente de Feijão
+item.beetItem.name=Beterraba
+item.beetseedItem.name=Semente de Beterraba
+item.broccoliItem.name=Brócoli
+item.broccoliseedItem.name=Semente de Brócoli
+item.cauliflowerItem.name=Couve-flor
+item.cauliflowerseedItem.name=Semente de Couve-flor
+item.celeryItem.name=Aipo
+item.celeryseedItem.name=Semente de Aipo
+item.cranberryItem.name=Oxicoco
+item.cranberryseedItem.name=Semente de Oxicoco
+item.garlicItem.name=Alho
+item.garlicseedItem.name=Semente de Alho
+item.gingerItem.name=Gengibre
+item.gingerseedItem.name=Gengibre
+item.leekItem.name=Alho-poró
+item.leekseedItem.name=Semente de Alho-poró
+item.lettuceItem.name=Alface
+item.lettuceseedItem.name=Semente de Alface
+item.oatsItem.name=Aveia
+item.oatsseedItem.name=Semente de Aveia
+item.onionItem.name=Cebola
+item.onionseedItem.name=Semente de Cebola
+item.parsnipItem.name=Chirívia
+item.parsnipseedItem.name=Semente de Chirívia
+item.peanutItem.name=Amendoim
+item.peanutseedItem.name=Semente de Amendoim
+item.pineappleItem.name=Abacaxi
+item.pineappleseedItem.name=Semente de Abacaxi
+item.radishItem.name=Rabanete
+item.radishseedItem.name=Semente de Rabanete
+item.riceItem.name=Arroz
+item.riceseedItem.name=Semente de Arroz
+item.ricecakeItem.name=Bolo de Arroz
+item.rutabagaItem.name=Couve-nabo
+item.rutabagaseedItem.name=Semente de Couve-nabo
+item.ryeItem.name=Centeio
+item.ryeseedItem.name=Semente de Centeio
+item.scallionItem.name=Cebolinha
+item.scallionseedItem.name=Semente de Cebolinha
+item.soybeanItem.name=Soja
+item.soybeanseedItem.name=Semente de Soja
+item.spiceleafItem.name=Louro
+item.spiceleafseedItem.name=Semente de Louro
+item.sunflowerseedsItem.name=Sementes de Girassol
+item.sunflowerseedItem.name=Semente de Girassol
+item.sweetpotatoItem.name=Batata Doce
+item.sweetpotatoseedItem.name=Semente de Batata Doce
+item.bakedsweetpotatoItem.name=Batata Doce Assada
+item.tealeafItem.name=Folha de Chá
+item.teaseedItem.name=Semente de Chá
+item.teaItem.name=Xícara de Chá
+item.turnipItem.name=Nabo
+item.turnipseedItem.name=Semente de Nabo
+item.whitemushroomItem.name=Cogumelo Branco
+item.whitemushroomseedItem.name=Esporo de Cogumelo Branco
         
 item.artichokeItem.name=Artichoke
 item.artichokeseedItem.name=Artichoke Seed
