--- a/resources/assets/harvestcraft/lang/pt_BR.lang
+++ b/resources/assets/harvestcraft/lang/pt_BR.lang
@@ -8,9 +8,9 @@ tooltip.harvestcraft.item.queenbeeItem=Apiária: Favo de Mel, Favo de Cera, Larv
 
 # Blocks
 tile.cuttingboard.name=Tábua de Cortar
-tile.pot.name=Pote
+tile.pot.name=Panela
 
-tile.beehive.name=Beehive
+tile.beehive.name=Beehive ####
 tile.apiary.name=Apiária
 tile.presser.name=Pressionador
 
@@ -21,7 +21,7 @@ sink_3.name=Poço de Tijolo
 
 tile.salt.name=Minério de Sal
 
-tile.market.name=Mercador
+tile.market.name=Mercado
 
 tile.oven.name=Forno
 
@@ -50,7 +50,7 @@ tile.pamCinnamon.name=Canela
 tile.pamCoconut.name=Coco
 tile.pamDate.name=Tâmara
 tile.pamDragonfruit.name=Pitaia
-tile.pamDurian.name=Duriãp
+tile.pamDurian.name=Durião
 tile.pamFig.name=Figo
 tile.pamGrapefruit.name=Toranja
 tile.pamLemon.name=Limão-siciliano
@@ -193,7 +193,7 @@ tile.pamchocolatesprinkleCake.name=Bolo com Granulado de Chocolate
 tile.pamredvelvetCake.name=Bolo Veludo Vermelhho
 tile.pamlamingtonCake.name=Lamington
 tile.pampavlovaCake.name=Pavlova
-tile.pamholidayCake.name=Holiday Cake
+tile.pamholidayCake.name=Bolo de Natal ####
 
 # Items
 item.cottonItem.name=Algodão
@@ -218,7 +218,7 @@ item.beeswaxItem.name=Cera de Abelha
 item.royaljellyItem.name=Geléia Real
 item.grubItem.name=Larva de Abelha
 
-item.potItem.name=Pote
+item.potItem.name=Panela
 item.skilletItem.name=Frigideira
 item.saucepanItem.name=Caçarola
 item.bakewareItem.name=Assadeira
@@ -290,147 +290,147 @@ item.turnipseedItem.name=Semente de Nabo
 item.whitemushroomItem.name=Cogumelo Branco
 item.whitemushroomseedItem.name=Esporo de Cogumelo Branco
         
-item.artichokeItem.name=Artichoke
-item.artichokeseedItem.name=Artichoke Seed
-item.bellpepperItem.name=Bellpepper
-item.bellpepperseedItem.name=Bellpepper Seed
-item.blackberryItem.name=Blackberry
-item.blackberryseedItem.name=Blackberry Seed
-item.blueberryItem.name=Blueberry
-item.blueberryseedItem.name=Blueberry Seed
-item.brusselsproutItem.name=Brussel Sprout
-item.brusselsproutseedItem.name=Brussel Sprout Seed
-item.cabbageItem.name=Cabbage
-item.cabbageseedItem.name=Cabbage Seed
-item.cactusfruitItem.name=Cactus Fruit
-item.cactusfruitseedItem.name=Cactus Fruit Seed
-item.candleberryItem.name=Candleberry
-item.candleberryseedItem.name=Candleberry Seed
-item.waxItem.name=Wax
-item.cantaloupeItem.name=Cantaloupe
-item.cantaloupeseedItem.name=Cantaloupe Seed
-item.chilipepperItem.name=Chili Pepper
-item.chilipepperseedItem.name=Chili Pepper Seed
-item.coffeebeanItem.name=Coffee Beans
-item.coffeeseedItem.name=Coffee Seed
-item.coffeeItem.name=Cup of Coffee
-item.cornItem.name=Corn
-item.cornseedItem.name=Corn Seed
-item.popcornItem.name=Popcorn
-item.cottonItem.name=Cotton
-item.cottonseedItem.name=Cotton Seed
-item.wovencottonItem.name=Woven Cotton
-item.cucumberItem.name=Cucumber
-item.cucumberseedItem.name=Cucumber Seed
-item.eggplantItem.name=Eggplant
-item.eggplantseedItem.name=Eggplant Seed
-item.grilledeggplantItem.name=Grilled Eggplant
-item.grapeItem.name=Grape
-item.grapeseedItem.name=Grape Seed
-item.raisinsItem.name=Raisins
+item.artichokeItem.name=Alcachofra
+item.artichokeseedItem.name=Semente de Alcachofra
+item.bellpepperItem.name=Pimentão
+item.bellpepperseedItem.name=Semente de Pimentão
+item.blackberryItem.name=Amora
+item.blackberryseedItem.name=Semente de Amora
+item.blueberryItem.name=Mirtilo
+item.blueberryseedItem.name=Semente de Mirtilo
+item.brusselsproutItem.name=Couve de Bruxelas
+item.brusselsproutseedItem.name=Semente de Couve de Bruxelas
+item.cabbageItem.name=Repolho
+item.cabbageseedItem.name=Semente de Repolho
+item.cactusfruitItem.name=Tuna
+item.cactusfruitseedItem.name=Semente de Tuna
+item.candleberryItem.name=Tungue
+item.candleberryseedItem.name=Semente de Tungue
+item.waxItem.name=Cera
+item.cantaloupeItem.name=Melão
+item.cantaloupeseedItem.name=Semente de Melão
+item.chilipepperItem.name=Pimenta Chili
+item.chilipepperseedItem.name=Semente de Pimenta Chili
+item.coffeebeanItem.name=Grãos de Café
+item.coffeeseedItem.name=Semente de Café
+item.coffeeItem.name=Xícara de Café
+item.cornItem.name=Milho
+item.cornseedItem.name=Semente de Milho
+item.popcornItem.name=Pipoca
+item.cottonItem.name=Algodão
+item.cottonseedItem.name=Semente de Algodão
+item.wovencottonItem.name=Malha de Algodão
+item.cucumberItem.name=Pepino
+item.cucumberseedItem.name=Semente de Pepino
+item.eggplantItem.name=Berinjela
+item.eggplantseedItem.name=Semente de Berinjela
+item.grilledeggplantItem.name=Semente de Berinjela
+item.grapeItem.name=Uva
+item.grapeseedItem.name=Semente de Uva
+item.raisinsItem.name=Uvas Passas
 item.kiwiItem.name=Kiwi
-item.kiwiseedItem.name=Kiwi Seed
-item.mustardseedsItem.name=Mustard Seeds
-item.mustardseedItem.name=Mustard Seed
-item.okraItem.name=Okra
-item.okraseedItem.name=Okra Seed
-item.peasItem.name=Peas
-item.peasseedItem.name=Peas Seed
-item.raspberryItem.name=Raspberry
-item.raspberryseedItem.name=Raspberry Seed
-item.rhubarbItem.name=Rhubarb
-item.rhubarbseedItem.name=Rhubarb Seed
-item.seaweedItem.name=Seaweed
-item.seaweedseedItem.name=Seaweed Seed
-item.strawberryItem.name=Strawberry
-item.strawberryseedItem.name=Strawberry Seed
-item.tomatoItem.name=Tomato
-item.tomatoseedItem.name=Tomato Seed
-item.wintersquashItem.name=Winter Squash
-item.wintersquashseedItem.name=Winter Squash Seed
-item.zucchiniItem.name=Zucchini
-item.zucchiniseedItem.name=Zucchini Seed
-item.bambooshootItem.name=Bamboo Shoot
-item.bambooshootseedItem.name=Bamboo Shoot Seed
-item.spinachItem.name=Spinach
-item.spinachseedItem.name=Spinach Seed
+item.kiwiseedItem.name=Semente de Kiwi
+item.mustardseedsItem.name=Sementes de Mostarda
+item.mustardseedItem.name=Semente de Mostarda
+item.okraItem.name=Quiabo
+item.okraseedItem.name=Semente de Quiabo
+item.peasItem.name=Ervilhas
+item.peasseedItem.name=Semente de Ervilha
+item.raspberryItem.name=Framboesa
+item.raspberryseedItem.name=Semente de Framboesa
+item.rhubarbItem.name=Ruibarbo
+item.rhubarbseedItem.name=Semente de Ruibarbo
+item.seaweedItem.name=Alga Marinha
+item.seaweedseedItem.name=Semente de Alga Marinha
+item.strawberryItem.name=Morango
+item.strawberryseedItem.name=Semente de Morango
+item.tomatoItem.name=Tomate
+item.tomatoseedItem.name=Semente de Tomate
+item.wintersquashItem.name=Moranga
+item.wintersquashseedItem.name=Semente de Moranga
+item.zucchiniItem.name=Abobrinha
+item.zucchiniseedItem.name=Semente de Abobrinha
+item.bambooshootItem.name=Broto de Bambu
+item.bambooshootseedItem.name=Semente de Bambu
+item.spinachItem.name=Espinafre
+item.spinachseedItem.name=Semente de Espinafre
         
-item.almondItem.name=Almond
-item.apricotItem.name=Apricot
-item.avocadoItem.name=Avocado
+item.almondItem.name=Amêndoa
+item.apricotItem.name=Damasco
+item.avocadoItem.name=Abacate
 item.bananaItem.name=Banana
-item.cashewItem.name=Cashew
-item.cherryItem.name=Cherry
-item.chestnutItem.name=Chestnut
-item.cinnamonItem.name=Cinnamon
-item.coconutItem.name=Coconut
-item.dateItem.name=Date
-item.dragonfruitItem.name=Dragonfruit
-item.durianItem.name=Durian
-item.figItem.name=Fig
-item.grapefruitItem.name=Grapefruit
-item.lemonItem.name=Lemon
-item.limeItem.name=Lime
-item.maplesyrupItem.name=Maple Syrup
-item.mangoItem.name=Mango
-item.nutmegItem.name=Nutmeg
-item.oliveItem.name=Olive
-item.orangeItem.name=Orange
-item.papayaItem.name=Papaya
-item.peachItem.name=Peach
-item.pearItem.name=Pear
-item.pecanItem.name=Pecan
-item.peppercornItem.name=Peppercorn
-item.persimmonItem.name=Persimmon
-item.pistachioItem.name=Pistachio
-item.plumItem.name=Plum
-item.pomegranateItem.name=Pomegranate
-item.starfruitItem.name=Starfruit
-item.vanillabeanItem.name=Vanilla Bean
-item.walnutItem.name=Walnut
+item.cashewItem.name=Caju
+item.cherryItem.name=Cereja
+item.chestnutItem.name=Castanha
+item.cinnamonItem.name=Canela
+item.coconutItem.name=Coco
+item.dateItem.name=Tâmara
+item.dragonfruitItem.name=Pitaia
+item.durianItem.name=Durião
+item.figItem.name=Figo
+item.grapefruitItem.name=Toranja
+item.lemonItem.name=Limão-siciliano
+item.limeItem.name=Lima
+item.maplesyrupItem.name=Xarope de Bordo
+item.mangoItem.name=Manga
+item.nutmegItem.name=Noz-moscada
+item.oliveItem.name=Azeitona
+item.orangeItem.name=Laranja
+item.papayaItem.name=Mamão
+item.peachItem.name=Pêssego
+item.pearItem.name=Pêra
+item.pecanItem.name=Noz-pecã
+item.peppercornItem.name=Pimenta-do-reino
+item.persimmonItem.name=Caqui
+item.pistachioItem.name=Pistache
+item.plumItem.name=Ameixa
+item.pomegranateItem.name=Romã
+item.starfruitItem.name=Carambola
+item.vanillabeanItem.name=Fava de Baunilha
+item.walnutItem.name=Noz
 
-item.grilledasparagusItem.name=Grilled Asparagus
-item.ricecakeItem.name=Rice Cake
-item.bakedsweetpotatoItem.name=Baked Sweet Potato
-item.teaItem.name=Cup of Tea
-item.coffeeItem.name=Cup of Coffee
-item.grilledeggplantItem.name=Grilled Eggplant
-item.toastedcoconutItem.name=Toasted Coconut
-item.vanillaItem.name=Vanilla
+item.grilledasparagusItem.name=Aspargo Grelhado
+item.ricecakeItem.name=Bolo de Arroz
+item.bakedsweetpotatoItem.name=Batata Doce Assada
+item.teaItem.name=Xícara de Chá
+item.coffeeItem.name=Xícara de Café
+item.grilledeggplantItem.name=Berinjela Grelhada
+item.toastedcoconutItem.name=Coco Torrado
+item.vanillaItem.name=Baunilha
         
-item.saltItem.name=Salt
-item.flourItem.name=Flour
-item.doughItem.name=Dough
-item.toastItem.name=Toast
-item.pastaItem.name=Pasta
-item.heavycreamItem.name=Heavy Cream
-item.butterItem.name=Butter
-item.cheeseItem.name=Cheese
-item.icecreamItem.name=Ice Cream
-item.grilledcheeseItem.name=Grilled Cheese
-item.applesauceItem.name=Apple Sauce
-item.applejuiceItem.name=Apple Juice
-item.applepieItem.name=Apple Pie
-item.caramelappleItem.name=Caramel Apple
-item.pumpkinbreadItem.name=Pumpkin Bread
-item.roastedpumpkinseedsItem.name=Roasted Pumpkin Seeds
-item.pumpkinsoupItem.name=Pumpkin Soup
-item.melonjuiceItem.name=Melon Juice
-item.melonsmoothieItem.name=Melon Smoothie
-item.carrotjuiceItem.name=Carrot Juice
-item.carrotcakeItem.name=Carrot Cake
-item.carrotsoupItem.name=Carrot Soup
-item.glazedcarrotsItem.name=Glazed Carrots
-item.butteredpotatoItem.name=Buttered Potato
-item.loadedbakedpotatoItem.name=Loaded Baked Potato
-item.mashedpotatoesItem.name=Mashed Potatoes
-item.potatosaladItem.name=Potato Salad
-item.potatosoupItem.name=Potato Soup
-item.friesItem.name=Fries
-item.grilledmushroomItem.name=Grilled Mushroom
-item.stuffedmushroomItem.name=Stuffed Mushroom
-item.chickensandwichItem.name=Chicken Sandwich
-item.chickennoodlesoupItem.name=Chicken Noodle Soup
+item.saltItem.name=Sal
+item.flourItem.name=Farinha
+item.doughItem.name=Massa
+item.toastItem.name=Torrada
+item.pastaItem.name=Macarrão
+item.heavycreamItem.name=Creme de Leite
+item.butterItem.name=Manteiga
+item.cheeseItem.name=Queijo
+item.icecreamItem.name=Sorvete
+item.grilledcheeseItem.name=Queijo Grelhado
+item.applesauceItem.name=Molho de Maçã
+item.applejuiceItem.name=Suco de Maçã
+item.applepieItem.name=Torta de Maçã
+item.caramelappleItem.name=Maçã do Amor
+item.pumpkinbreadItem.name=Pão de Abóbora
+item.roastedpumpkinseedsItem.name=Sementes de Abóbora Torradas
+item.pumpkinsoupItem.name=Sopa de Abóbora
+item.melonjuiceItem.name=Suco de Melão
+item.melonsmoothieItem.name=Batida de Melão
+item.carrotjuiceItem.name=Suco de Cenoura
+item.carrotcakeItem.name=Bolo de Cenoura
+item.carrotsoupItem.name=Sopa de Cenouras
+item.glazedcarrotsItem.name=Cenouras Carameladas
+item.butteredpotatoItem.name=Batata Amanteigada
+item.loadedbakedpotatoItem.name=Batata Assada Carregada
+item.mashedpotatoesItem.name=Batatas Amassadas
+item.potatosaladItem.name=Salada de Batata
+item.potatosoupItem.name=Sopa de Batata
+item.friesItem.name=Batata Frita
+item.grilledmushroomItem.name=Cogumelo Grelhado
+item.stuffedmushroomItem.name=Cogumelo Recheado
+item.chickensandwichItem.name=Sanduíche de Frango
+item.chickennoodlesoupItem.name=Sopa de Macarrão de Galinha
 item.chickenpotpieItem.name=Chicken Pot Pie
 item.breadedporkchopItem.name=Breaded Porkchop
 item.hotdogItem.name=Hotdog
