--- a/resources/assets/harvestcraft/lang/pt_BR.lang
+++ b/resources/assets/harvestcraft/lang/pt_BR.lang
@@ -17,7 +17,7 @@ tile.presser.name=Pressionador
 sink_0.name=Barril de Água
 sink_1.name=Bacia de Pedra
 sink_2.name=Jarro de Argila
-sink_3.name=Poço de Tijolo
+sink_3.name=Poço de Tijolos
 
 tile.salt.name=Minério de Sal
 
@@ -110,63 +110,63 @@ tile.pamstarfruitSapling.name=Muda de Carambola
 tile.pamvanillabeanSapling.name=Muda de Baunilha
 tile.pamwalnutSapling.name=Muda de Noz
 
-tile.pamblackberryCrop.name=Blackberry Crop
-tile.pamblueberryCrop.name=Blueberry Crop
-tile.pamcandleberryCrop.name=Candleberry Crop
-tile.pamraspberryCrop.name=Raspberry Crop
-tile.pamstrawberryCrop.name=Strawberry Crop
-tile.pamcactusfruitCrop.name=Cactus Fruit Crop
-tile.pamasparagusCrop.name=Asparagus Crop
-tile.pambarleyCrop.name=Barley Crop
-tile.pamoatsCrop.name=Oats Crop
-tile.pamryeCrop.name=Rye Crop
-tile.pamcornCrop.name=Corn Crop
-tile.pambambooshootCrop.name=Bamboo Crop
-tile.pamcantaloupeCrop.name=Cantaloupe Crop
-tile.pamcucumberCrop.name=Cucumber Crop
-tile.pamwintersquashCrop.name=Winter Squash Crop
-tile.pamzucchiniCrop.name=Zucchini Crop
-tile.pambeetCrop.name=Beet Crop
-tile.pamonionCrop.name=Onion Crop
-tile.pamparsnipCrop.name=Parsnip Crop
-tile.pampeanutCrop.name=Peanut Crop
-tile.pamradishCrop.name=Radish Crop
-tile.pamrutabagaCrop.name=Rutabaga Crop
-tile.pamsweetpotatoCrop.name=Sweet Potato Crop
-tile.pamturnipCrop.name=Turnip Crop
-tile.pamrhubarbCrop.name=Rhubarb Crop
-tile.pamceleryCrop.name=Celery Crop
-tile.pamgarlicCrop.name=Garlic Crop
-tile.pamgingerCrop.name=Ginger Crop
-tile.pamspiceleafCrop.name=Spice Leaf Crop
-tile.pamtealeafCrop.name=Tea Leaf Crop
-tile.pamcoffeebeanCrop.name=Coffee Bean Crop
-tile.pammustardseedsCrop.name=Mustard Seeds Crop
-tile.pambroccoliCrop.name=Broccoli Crop
-tile.pamcauliflowerCrop.name=Cauliflower Crop
-tile.pamleekCrop.name=Leek Crop
-tile.pamlettuceCrop.name=Lettuce Crop
-tile.pamscallionCrop.name=Scallion Crop
-tile.pamartichokeCrop.name=Artichoke Crop
-tile.pambrusselsproutCrop.name=Brussel Sprout Crop
-tile.pamcabbageCrop.name=Cabbage Crop
-tile.pamspinachCrop.name=Spinach Crop
-tile.pamwhitemushroomCrop.name=White Mushroom Crop
-tile.pambeanCrop.name=Bean Crop
-tile.pamsoybeanCrop.name=Soybean Crop
-tile.pambellpepperCrop.name=Bell Pepper Crop
-tile.pamchilipepperCrop.name=Chili Pepper Crop
-tile.pameggplantCrop.name=Eggplant Crop
-tile.pamokraCrop.name=Okra Crop
-tile.pampeasCrop.name=Peas Crop
-tile.pamtomatoCrop.name=Tomato Crop
-tile.pamcottonCrop.name=Cotton Crop
-tile.pampineappleCrop.name=Pineapple Crop
-tile.pamgrapeCrop.name=Grape Crop
-tile.pamkiwiCrop.name=Kiwi Crop
-tile.pamcranberryCrop.name=Cranberry Crop
-tile.pamriceCrop.name=Rice Crop
-tile.pamseaweedCrop.name=Seaweed Crop
+tile.pamblackberryCrop.name=Pé de Amora
+tile.pamblueberryCrop.name=Pé de Mirtilo
+tile.pamcandleberryCrop.name=Candleberry Crop ####
+tile.pamraspberryCrop.name=Pé de Framboesa
+tile.pamstrawberryCrop.name=Pé de Morango
+tile.pamcactusfruitCrop.name=Pé de Tuna
+tile.pamasparagusCrop.name=Pé de Aspargo
+tile.pambarleyCrop.name=Pé de Cevada
+tile.pamoatsCrop.name=Pé de Aveia
+tile.pamryeCrop.name=Pé de Centeio
+tile.pamcornCrop.name=Pé de Milho
+tile.pambambooshootCrop.name=Pé de Bambu
+tile.pamcantaloupeCrop.name=Pé de Melão
+tile.pamcucumberCrop.name=Pé de Pepino
+tile.pamwintersquashCrop.name=Pé de Moranga
+tile.pamzucchiniCrop.name=Pé de Abobrinha
+tile.pambeetCrop.name=Pé de Beterrada
+tile.pamonionCrop.name=Pé de Cebola
+tile.pamparsnipCrop.name=Pé de Chirívia
+tile.pampeanutCrop.name=Pé de Amendoim
+tile.pamradishCrop.name=Pé de Rabanete
+tile.pamrutabagaCrop.name=Pé de Couve-nabo
+tile.pamsweetpotatoCrop.name=Pé de Batata Doce
+tile.pamturnipCrop.name=Pé de Nabo
+tile.pamrhubarbCrop.name=Pé de Ruibarbo
+tile.pamceleryCrop.name=Pé de Aipo
+tile.pamgarlicCrop.name=Pé de Gengibre
+tile.pamgingerCrop.name=Pé de Gengibre
+tile.pamspiceleafCrop.name=Pé de Louro
+tile.pamtealeafCrop.name=Pé de Folha de Chá
+tile.pamcoffeebeanCrop.name=Pé de Café
+tile.pammustardseedsCrop.name=Pé de Mostarda
+tile.pambroccoliCrop.name=Pé de Brócolis
+tile.pamcauliflowerCrop.name=Pé de Couve-flor
+tile.pamleekCrop.name=Pé de Alho-poró
+tile.pamlettuceCrop.name=Pé de Alface
+tile.pamscallionCrop.name=Pé de Cebolinha
+tile.pamartichokeCrop.name=Pé de Alcachofra
+tile.pambrusselsproutCrop.name=Pé de Couve de Bruxelas
+tile.pamcabbageCrop.name=Pé de Repolho
+tile.pamspinachCrop.name=Pé de Espinafre
+tile.pamwhitemushroomCrop.name=Pé de Cogumelo Branco
+tile.pambeanCrop.name=Pé de Feijão
+tile.pamsoybeanCrop.name=Pé de Soja
+tile.pambellpepperCrop.name=Pé de Pimentão
+tile.pamchilipepperCrop.name=Pé de Pimenta Chili
+tile.pameggplantCrop.name=Pé de Berinjela
+tile.pamokraCrop.name=Pé de Quiabo
+tile.pampeasCrop.name=Pé de Ervilha
+tile.pamtomatoCrop.name=Pé de Tomate
+tile.pamcottonCrop.name=Pé de Algodão
+tile.pampineappleCrop.name=Pé de Abacaxi
+tile.pamgrapeCrop.name=Pé de Uva
+tile.pamkiwiCrop.name=Pé de Kiwi
+tile.pamcranberryCrop.name=Pé de Oxicoco
+tile.pamriceCrop.name=Pé de Arroz
+tile.pamseaweedCrop.name=Pé de Alga Marinha
 
 tile.pamcandleDeco1.name=Vela Branca
 tile.pamcandleDeco2.name=Vela Laranja
@@ -415,8 +415,8 @@ item.caramelappleItem.name=Maçã do Amor
 item.pumpkinbreadItem.name=Pão de Abóbora
 item.roastedpumpkinseedsItem.name=Sementes de Abóbora Torradas
 item.pumpkinsoupItem.name=Sopa de Abóbora
-item.melonjuiceItem.name=Suco de Melão
-item.melonsmoothieItem.name=Batida de Melão
+item.melonjuiceItem.name=Suco de Melancia
+item.melonsmoothieItem.name=Batida de Melancia
 item.carrotjuiceItem.name=Suco de Cenoura
 item.carrotcakeItem.name=Bolo de Cenoura
 item.carrotsoupItem.name=Sopa de Cenouras
@@ -720,7 +720,7 @@ item.raspberrypieItem.name=Torta de Framboesa
 item.raspberrysmoothieItem.name=Batida de Framboesa
 item.raspberryyogurtItem.name=Iogurte de Framboesa
 item.cinnamonsugardonutItem.name=Rosquinha com Açúcar e Canela
-item.melonyogurtItem.name=Iogurte de Melão
+item.melonyogurtItem.name=Iogurte de Melancia
         
 item.kiwijuiceItem.name=Suco de Kiwi
 item.kiwismoothieItem.name=Batida de Kiwi
@@ -805,64 +805,64 @@ item.watermelonjellysandwichItem.name=Sanduíche de Geléia de Melancia
 item.bubblywaterItem.name=Água Gaseificada
 item.cherrysodaItem.name=Refri de Cereja
 item.colasodaItem.name=Refri de Cola 
-item.gingersodaItem.name=Ginger Ale ####
+item.gingersodaItem.name=Ginger Ale
 item.grapesodaItem.name=Refri de Uva
-item.lemonlimesodaItem.name=Refri de Limão ####
-item.orangesodaItem.name=Orange Soda
-item.rootbeersodaItem.name=Root Beer
+item.lemonlimesodaItem.name=Refri de Limão
+item.orangesodaItem.name=Refri de Laranja
+item.rootbeersodaItem.name=Cerveja-de-raiz
 item.strawberrysodaItem.name=Strawberry Soda
         
-item.caramelicecreamItem.name=Caramel Ice Cream ####
-item.mintchocolatechipicemcreamItem.name=Mint Chocolate Chip Ice Cream
-item.strawberryicecreamItem.name=Strawberry Ice Cream
-item.vanillaicecreamItem.name=Vanilla Ice Cream
+item.caramelicecreamItem.name=Sorvete de Caramelo
+item.mintchocolatechipicemcreamItem.name=Sorvete de Menta com Chocolate
+item.strawberryicecreamItem.name=Sorvete de Morango
+item.vanillaicecreamItem.name=Sorvete de Baunilha
         
-item.ediblerootItem.name=Edible Root
+item.ediblerootItem.name=Raiz Comestível
         
-item.gingerchickenItem.name=Ginger Chicken
+item.gingerchickenItem.name=Frango ao Gengibre
         
-item.oldworldveggiesoupItem.name=Old World Veggie Soup
-item.spicebunItem.name=Spice Bun
-item.gingeredrhubarbtartItem.name=Gingered Rhubarb Tart
-item.lambbarleysoupItem.name=Lamb Barley Soup
-item.honeylemonlambItem.name=Honey Lemon Lamb
-item.pumpkinoatsconesItem.name=Pumpkin Oat Scones
-item.beefjerkyItem.name=Beef Jerky
-item.plumjuiceItem.name=Plum Juice
-item.pearjuiceItem.name=Pear Juice
-item.ovenroastedcauliflowerItem.name=Oven Roasted Cauliflower
-item.leekbaconsoupItem.name=Leek Bacon Soup
-item.herbbutterparsnipsItem.name=Herb Butter Parsnips
-item.scallionbakedpotatoItem.name=Scallion Baked Potato
-item.soymilkItem.name=Soy Milk
-item.firmtofuItem.name=Firm Tofu
-item.silkentofuItem.name=Silken Tofu
+item.oldworldveggiesoupItem.name=Sopa de Vegetais do Velho Mundo
+item.spicebunItem.name=Pão Temperado
+item.gingeredrhubarbtartItem.name=Torta de Ruibarbo ao Gengibre
+item.lambbarleysoupItem.name=Sopa de Cevada com Carneiro
+item.honeylemonlambItem.name=Carneiro ao Limão e Mel
+item.pumpkinoatsconesItem.name=Scones de Aveia de Abóbora
+item.beefjerkyItem.name=Charque
+item.plumjuiceItem.name=Suco de Ameixa
+item.pearjuiceItem.name=Suco de Pêra
+item.ovenroastedcauliflowerItem.name=Couve-flor Assada no Forno
+item.leekbaconsoupItem.name=Sopa de Alho-poró com Bacon
+item.herbbutterparsnipsItem.name=Chirívia Amanteigada com Ervas
+item.scallionbakedpotatoItem.name=Batata Assada com Cebolinha
+item.soymilkItem.name=Leite de Soja
+item.firmtofuItem.name=Tofu Firme
+item.silkentofuItem.name=Tofu Sedoso
 
-item.bamboosteamedriceItem.name=Bamboo Steamed Rice ####
-item.roastedchestnutItem.name=Roasted Chestnut
-item.sweetpotatosouffleItem.name=Sweet Potato Souffle
-item.cashewchickenItem.name=Cashew Chicken
-item.apricotjuiceItem.name=Apricot Juice
-item.apricotyogurtItem.name=Apricot Yogurt
-item.apricotglazedporkItem.name=Apricot Glazed Pork
-item.apricotjellyItem.name=Apricot Jelly
-item.apricotjellysandwichItem.name=Apricot Jelly Sandwich
-item.apricotsmoothieItem.name=Apricot Smoothie
-item.figbarItem.name=Fig Bar
-item.figjellyItem.name=Fig Jelly
-item.figjellysandwichItem.name=Fig Jelly Sandwich
-item.figsmoothieItem.name=Fig Smoothie
-item.figyogurtItem.name=Fig Yogurt
-item.figjuiceItem.name=Fig Juice
-item.grapefruitjuiceItem.name=Grapfruit Juice
-item.grapefruitjellyItem.name=Grapefruit Jelly
-item.grapefruitjellysandwichItem.name=Grapefruit Jelly Sandwich
-item.grapefruitsmoothieItem.name=Grapefruit Smoothie
-item.grapefruityogurtItem.name=Grapefruit Yogurt
-item.grapefruitsodaItem.name=Grapefruit Soda
-item.citrussaladItem.name=Citrus Salad
-item.pecanpieItem.name=Pecan Pie
-item.pralinesItem.name=Pralines
+item.bamboosteamedriceItem.name=Arroz ao Vapor com Bambu
+item.roastedchestnutItem.name=Castanha Torrada
+item.sweetpotatosouffleItem.name=Suflê de Batata Doce
+item.cashewchickenItem.name=Frango ao Caju
+item.apricotjuiceItem.name=Suco de Damasco
+item.apricotyogurtItem.name=Iogurte de Damasco
+item.apricotglazedporkItem.name=Carne de Porco Caramelada com Damasco
+item.apricotjellyItem.name=Geléia de Damasco
+item.apricotjellysandwichItem.name=Sanduíche de Geléia de Damasco
+item.apricotsmoothieItem.name=Batida de Damasco
+item.figbarItem.name=Barra de Figo
+item.figjellyItem.name=Geléia de Figo
+item.figjellysandwichItem.name=Sanduíche de Geléia de Figo
+item.figsmoothieItem.name=Batida de Figo
+item.figyogurtItem.name=Iogurte de Figo
+item.figjuiceItem.name=Suco de Figo
+item.grapefruitjuiceItem.name=Suco de Toranja
+item.grapefruitjellyItem.name=Geléia de Toranja
+item.grapefruitjellysandwichItem.name=Sanduíche de Geléia de Toranja
+item.grapefruitsmoothieItem.name=Batida de Toranja
+item.grapefruityogurtItem.name=Iogurte de Toranja
+item.grapefruitsodaItem.name=Refri de Toranja
+item.citrussaladItem.name=Salada Cítrica
+item.pecanpieItem.name=Torta de Noz-pecã
+item.pralinesItem.name=Pralinês
 item.persimmonjuiceItem.name=Suco de Caqui
 item.persimmonyogurtItem.name=Iogurte de Caqui
 item.persimmonsmoothieItem.name=Batida de Caqui
