--- a/resources/assets/harvestcraft/lang/en_US.lang
+++ b/resources/assets/harvestcraft/lang/en_US.lang
@@ -696,7 +696,7 @@ item.biscuitItem.name=Biscuit
 item.creamcookieItem.name=Cream Cookie
 item.jaffaItem.name=Jaffa
 item.friedchickenItem.name=Fried Chicken
-item.chocolatesprinklecakeItem.name=Chocolate Spinkles Cake
+item.chocolatesprinklecakeItem.name=Chocolate Sprinkles Cake
 item.redvelvetcakeItem.name=Red Velvet Cake
 item.footlongItem.name=Footlong
         
